--- a/app/src/main/res/layout/organizer.xml
+++ b/app/src/main/res/layout/organizer.xml
@@ -6,16 +6,17 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="456dp"
-        android:layout_height="782dp"
-        app:layout_constraintBaseline_toBaselineOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/imageView4"
+        android:layout_width="476dp"
+        android:layout_height="813dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/background" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="parent"
+        app:srcCompat="@drawable/background"
+        tools:layout_editor_absoluteX="-33dp" />
 
     <ImageView
-        android:id="@+id/imageView9"
+        android:id="@+id/imageView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,11 +27,10 @@
         android:id="@+id/btnCreateSubject"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_marginStart="65dp"
+        android:layout_marginStart="63dp"
         android:layout_marginTop="173dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginBottom="26dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="23dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/btnToDoList"
         app:layout_constraintEnd_toStartOf="@+id/btnCalendar"
@@ -41,10 +41,9 @@
         android:id="@+id/btnCalendar"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_gravity="center"
         android:layout_marginTop="173dp"
-        android:layout_marginEnd="67dp"
-        android:layout_marginBottom="26dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="23dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/btnTimer"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,10 +54,9 @@
         android:id="@+id/btnToDoList"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_marginStart="65dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginStart="63dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="22dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/btnGradesTracker"
         app:layout_constraintEnd_toStartOf="@+id/btnTimer"
@@ -69,9 +67,8 @@
         android:id="@+id/btnTimer"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_marginEnd="67dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="22dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/btnReminders"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,10 +79,9 @@
         android:id="@+id/btnGradesTracker"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_marginStart="65dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginBottom="112dp"
+        android:layout_marginStart="63dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="114dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnReminders"
@@ -96,13 +92,13 @@
         android:id="@+id/btnReminders"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_gravity="center"
-        android:layout_marginEnd="67dp"
-        android:layout_marginBottom="112dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="114dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnGradesTracker"
         app:layout_constraintTop_toBottomOf="@+id/btnTimer" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
