--- a/app/src/main/res/layout/activity_performance_logs.xml
+++ b/app/src/main/res/layout/activity_performance_logs.xml
@@ -1,18 +1,61 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/addLogsButton"
+        android:id="@+id/add_logs_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Logs" />
+        android:text="Add Logs"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/subjectsRecyclerView"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1">
+
+        <TableLayout
+            android:id="@+id/logs_table_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:stretchColumns="*">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:text="Subject"
+                    android:layout_column="1"
+                    android:padding="5dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:text="Activity"
+                    android:layout_column="2"
+                    android:padding="5dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:text="Score (%)"
+                    android:layout_column="3"
+                    android:padding="5dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:text="Activity (%)"
+                    android:layout_column="4"
+                    android:padding="5dp"
+                    android:textStyle="bold" />
+
+            </TableRow>
+
+        </TableLayout>
+
+    </ScrollView>
 
 </LinearLayout>
