--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -9,10 +9,21 @@
     android:paddingBottom="16dp"
     tools:context=".TimerActivity">
 
+    <TextView
+        android:id="@+id/title_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="FOCUS MODE TIMER"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:gravity="center"
+        android:layout_marginBottom="16dp" />
+
     <EditText
         android:id="@+id/duration_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/title_text_view"
         android:layout_marginBottom="16dp"
         android:hint="Enter duration in minutes"
         android:imeOptions="actionDone"
@@ -23,9 +34,10 @@
         android:id="@+id/timer_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="48sp"
-        android:text="00:00"
         android:layout_centerInParent="true"
+        android:layout_below="@id/duration_edit_text"
+        android:text="00:00"
+        android:textSize="48sp"
         android:layout_marginBottom="16dp" />
 
     <Button
@@ -33,25 +45,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start"
+        android:layout_centerHorizontal="true"
         android:layout_below="@id/timer_text_view"
-        android:layout_alignParentStart="true"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginTop="16dp" />
 
     <Button
         android:id="@+id/stop_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Stop"
-        android:layout_below="@id/timer_text_view"
-        android:layout_toEndOf="@id/start_button"
-        android:layout_marginEnd="8dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/start_button"
+        android:layout_marginTop="16dp" />
 
     <Button
         android:id="@+id/restart_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Restart"
-        android:layout_below="@id/timer_text_view"
-        android:layout_toEndOf="@id/stop_button" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/stop_button"
+        android:layout_marginTop="16dp" />
 
 </RelativeLayout>
